# SistemiOperativiDedicati

./: README.md
STM_Ai_Sin/: .mxproject  .project  STM_Ai_Sin.ioc
STM_Ai_Sin/.ai/: sin_null_c_info.json
STM_Ai_Sin/CM4/: .cproject  .project
STM_Ai_Sin/CM7/: .cproject  .project  STM32H745ZITX_FLASH.ld  STM32H745ZITX_RAM.ld  STM_Ai_Sin_CM7.launch
STM_Ai_Sin/CM7/Core/Src/: gpio.c  main.c
STM_Ai_Sin/CM7/Debug/: STM_Ai_Sin_CM7.elf  STM_Ai_Sin_CM7.list  STM_Ai_Sin_CM7.map  makefile  objects.list  objects.mk  sources.mk
STM_Ai_Sin/CM7/Debug/Common/Src/: subdir.mk  system_stm32h7xx_dualcore_boot_cm4_cm7.cyclo  (+2 more)
STM_Ai_Sin/CM7/X-CUBE-AI/App/: sin.c  sin.h  sin_config.h  sin_data.c  sin_data.h  sin_data_params.c  sin_data_params.h  sin_generate_report.txt
YOLO training notebook/: Training_YOLO_network.ipynb
docs/report_latex/: bibl.bib  main.tex
docs/report_latex/capitoli/: capitolo1.tex  capitolo2.tex  capitolo3.tex  capitolo4.tex  capitolo5.tex  capitolo6.tex  capitolo7.tex  capitolo8.tex
models/: yolov8t_lp_gray_best.pt  yolov8t_lp_gray_split.onnx
python/: plate_recognition.py
zephyr/board_A_project/: prj.conf
zephyr/board_A_project/boards/: nucleo_h745zi_q_stm32h745xx_m7.overlay
zephyr/board_A_project/cube_ai/: network.c  network.h  network_data.c  network_data.h  network_details.h
zephyr/board_A_project/src/: main.c
zephyr/board_B_project/: CMakeLists.txt  prj.conf
zephyr/board_B_project/cube_ai/: network.c  network.h  network_data.c  network_data.h  network_details.h
zephyr/board_B_project/src/: main.c
(+74 files in other folders)
